--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name=renderer content=webkit>
     <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
     <title>WooYun知识库</title>
-    <base href=/WooyunDrops/>
+    <base href=/Wooyun-Drops/>
     <meta name=description content="乌云知识库, WooYun知识库, Wooyun Drops">
     <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
     <meta http-equiv=pragma content=no-cache>
@@ -22,14 +22,14 @@
           s.parentNode.insertBefore(hm, s);
         })();
       }</script>
-    <link href=/WooyunDrops/static/css/app.a083d51cc60adfc7080acee030aa220b.css rel=stylesheet>
+    <link href=/Wooyun-Drops/static/css/app.a083d51cc60adfc7080acee030aa220b.css rel=stylesheet>
 </head>
   
   <body>
     <app></app>
-    <script type=text/javascript src=/WooyunDrops/static/js/manifest.26d7fbb5980b66c53433.js></script>
-    <script type=text/javascript src=/WooyunDrops/static/js/vendor.234059a7349321e00abf.js></script>
-    <script type=text/javascript src=/WooyunDrops/static/js/app.568c661aec8b21495b34.js></script>
+    <script type=text/javascript src=/Wooyun-Drops/static/js/manifest.26d7fbb5980b66c53433.js></script>
+    <script type=text/javascript src=/Wooyun-Drops/static/js/vendor.234059a7349321e00abf.js></script>
+    <script type=text/javascript src=/Wooyun-Drops/static/js/app.568c661aec8b21495b34.js></script>
   </body>
 
 </html>
