--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <meta http-equiv=pragma content=no-cache>
     <meta http-equiv=cache-control content=no-cache>
     <meta http-equiv=expires content=0>
-    <link rel=stylesheet href=static/css/bootstrap.min.css>
-    <link rel=stylesheet href=static/css/main.min.css>
-    <script>window.onload = function() {
+    <link rel=stylesheet href=/Wooyun-Drops/static/css/bootstrap.min.css>
+    <link rel=stylesheet href=/Wooyun-Drops/static/css/main.min.css>
+    <!-- <script>window.onload = function() {
         var _hmt = _hmt || []; (function() {
           var hm = document.createElement("script");
           hm.src = "//hm.baidu.com/hm.js?1fc1cb73034cc3ef60874d7748bb6945";
           var s = document.getElementsByTagName("script")[0];
           s.parentNode.insertBefore(hm, s);
         })();
-      }</script>
+      }</script> -->
     <link href=/Wooyun-Drops/static/css/app.a083d51cc60adfc7080acee030aa220b.css rel=stylesheet>
 </head>
   
